Fix data categories wrapping

--- a/app/assets/stylesheets/home/dataset_list.sass
+++ b/app/assets/stylesheets/home/dataset_list.sass
@@ -104,9 +104,6 @@
   span
     display: inline-block
 
-  .prepend-pipe
-    display: inline
-
 .additional-info
   position: relative
   overflow: hidden
